# vaultproxy

./: .gitignore  .impeccable.md  LICENSE  README.md
.github/workflows/: ci.yml
cli/: README.md  package.json
cli/lib/: api.js  config.js
control-plane/: .env.example  Dockerfile  go.mod  go.sum  railway.toml
control-plane/cmd/server/: main.go
control-plane/internal/api/: handlers.go  handlers_internal.go  middleware.go  router.go  validate.go
control-plane/internal/config/: config.go
control-plane/internal/cron/: cleanup.go  rotation.go
control-plane/internal/db/: db.go
control-plane/internal/keys/: keys.go
control-plane/internal/push/: flyio.go  netlify.go  push.go  railway.go  render.go  vercel.go
dashboard/: .env.example  Dockerfile  package-lock.json  package.json  tsconfig.tsbuildinfo
dashboard/src/: middleware.ts
dashboard/src/app/: globals.css  layout.tsx
dashboard/src/app/dashboard/: layout.tsx  page.tsx
dashboard/src/app/login/: page.tsx
dashboard/src/app/onboard/: page.tsx
dashboard/src/components/: org-switcher.tsx
dashboard/src/lib/: api.ts  auth-client.ts  auth-server.ts  session.ts
docs/: architecture.md  phase-2-roadmap.md
edge-proxy/: Dockerfile  package-lock.json  package.json  tsconfig.json  wrangler.toml
edge-proxy/src/: index.ts  node.ts
edge-proxy/src/handlers/: proxy.ts  purge.ts
edge-proxy/src/lib/: cache.ts
edge-proxy/src/middleware/: auth.ts
proxy/: Cargo.toml  Dockerfile
proxy/src/: ca.rs  credential.rs  main.rs  policy.rs  providers.rs  proxy.rs
scripts/: sync-oss.sh
(+14 files in other folders)
